# KingdomRushLite

./: .gitattributes  .gitignore  CMakeLists.txt  KingdomRush-Lite.sln  README.md
Client/: CMakeLists.txt  KingdomRushLite.sln
Client/KingdomRushLite/: KingdomRushLite.vcxproj.filters
Client/KingdomRushLite/Data/: Waves.json  WavesTest.json
Client/KingdomRushLite/Scripts/Header/Bullet/: Bullet.h  BulletType.h
Client/KingdomRushLite/Scripts/Header/Bullet/Concrete/: Axe.h  Shell.h
Client/KingdomRushLite/Scripts/Header/Drop/: Drop.h
Client/KingdomRushLite/Scripts/Header/Enemy/: Enemy.h  EnemyType.h
Client/KingdomRushLite/Scripts/Header/Enemy/Concrete/: Goblin.h  Skeleton.h  Slime.h
Client/KingdomRushLite/Scripts/Header/Infra/: DirectionType.h
Client/KingdomRushLite/Scripts/Header/Infra/StateMachine/: State.h
Client/KingdomRushLite/Scripts/Header/Manager/: Manager.hpp
Client/KingdomRushLite/Scripts/Header/Manager/Concrete/: BulletManager.h  PlayerManager.h  ProcessManager.h  UIManager.h  WaveManager.h
Client/KingdomRushLite/Scripts/Header/Map/: Map.h  Route.h  Tile.h
Client/KingdomRushLite/Scripts/Header/Player/: Player.h  PlayerType.h
Client/KingdomRushLite/Scripts/Header/Player/Concrete/: PlayerDragon.h
Client/KingdomRushLite/Scripts/Header/Player/State/: PlayerState.h
Client/KingdomRushLite/Scripts/Header/Tower/: TowerType.h
Client/KingdomRushLite/Scripts/Header/UI/: GameOverUI.h  StatusUI.h
Client/KingdomRushLite/Scripts/Source/Bullet/: Bullet.cpp
Client/KingdomRushLite/Scripts/Source/Bullet/Concrete/: Arrow.cpp  Axe.cpp  Shell.cpp
Client/KingdomRushLite/Scripts/Source/Drop/: Drop.cpp
Client/KingdomRushLite/Scripts/Source/Enemy/: Enemy.cpp  EnemyType.cpp
Client/KingdomRushLite/Scripts/Source/Enemy/Concrete/: Goblin.cpp  Skeleton.cpp  Slime.cpp  SlimeKing.cpp
Client/KingdomRushLite/Scripts/Source/Infra/: CollideOutline.cpp
Client/KingdomRushLite/Scripts/Source/Player/: Player.cpp
Client/KingdomRushLite/Scripts/Source/UI/: GameOverUI.cpp
KingdomRush-Lite/: Game_Manager.h  Game_Manager.hpp  Map.h  (+8 more)
KingdomRushLite/: CMakeLists.txt  KingdomRushLite.vcxproj  KingdomRushLite.vcxproj.filters
KingdomRushLite/Data/: Configs.json  Map.csv  Waves.json  Waves00.json  WavesTest.json  config.json  level.json  waves.json
KingdomRushLite/Scripts/Header/Animation/: Animation.h  Animation.hpp
KingdomRushLite/Scripts/Header/Bullet/: Bullet.h  Bullet.hpp  BulletType.h  BulletType.hpp
KingdomRushLite/Scripts/Header/Bullet/Concrete/: Arrow.h  Arrow.hpp  Axe.h  Axe.hpp  Shell.h  Shell.hpp
KingdomRushLite/Scripts/Header/Drop/: Drop.h  DropType.h
KingdomRushLite/Scripts/Header/Drop/Concrete/: Coin.h
KingdomRushLite/Scripts/Header/Enemy/: Enemy.h  Enemy.hpp  EnemyType.h  EnemyType.hpp  Wave.h
KingdomRushLite/Scripts/Header/Enemy/Concrete/: Goblin.hpp  GoblinPriest.h  GoblinPriest.hpp  Skeleton.hpp  Slime.hpp  SlimeKing.h  SlimeKing.hpp
KingdomRushLite/Scripts/Header/Infra/: CollideOutline.h  ObjectPool.hpp  Timer.h
KingdomRushLite/Scripts/Header/Infra/ObjectPool/: EnemyPool.h  ObjectPool.hpp
KingdomRushLite/Scripts/Header/Infra/StateMachine/: State.h  StateMachine.h
KingdomRushLite/Scripts/Header/Manager/: AudioManager.hpp  CoinManager.hpp  ConfigManager.hpp  EnemyManager.hpp  GameManager.hpp  HomeManager.hpp  Manager.hpp  WaveManager.hpp
KingdomRushLite/Scripts/Header/Manager/Concrete/: AudioManager.h  AudioManager.hpp  BulletManager.h  BulletManager.hpp  CoinManager.hpp  ConfigManager.h  ConfigManager.hpp  DropManager.h  EnemyManager.h  EnemyManager.hpp  GameManager.h  GameManager.hpp  GameProgressManager.hpp  HomeManager.hpp  PlayerManager.h  ProcessManager.h  ProcessManager.hpp  ResourceManager.h  ResourceManager.hpp  TowerManager.h  TowerManager.hpp  UIManager.h  WaveManager.h  WaveManager.hpp
KingdomRushLite/Scripts/Header/Map/: Map.h  Map.hpp  Route.h  Route.hpp  Tile.h  Tile.hpp
KingdomRushLite/Scripts/Header/Math/: FacingDir.h  FacingDir.hpp  Timer.hpp  Vector2.h  Vector2.hpp
KingdomRushLite/Scripts/Header/Player/: Player.h
KingdomRushLite/Scripts/Header/Player/Concrete/: PlayerDragon.h  PlayerDragonStates.hpp
KingdomRushLite/Scripts/Header/Player/State/: PlayerState.h
KingdomRushLite/Scripts/Header/Timer/: Timer.hpp
KingdomRushLite/Scripts/Header/Tower/: Tower.h  Tower.hpp  TowerType.hpp
KingdomRushLite/Scripts/Header/Tower/Concrete/: Archer.h  Archer.hpp  Axeman.h  Axeman.hpp  Gunner.h  Gunner.hpp
KingdomRushLite/Scripts/Header/UI/: StatusBar.h  StatusUI.h
KingdomRushLite/Scripts/Header/UI/TowerPanel/: TowerPanel.h
KingdomRushLite/Scripts/Source/: Main.cpp
KingdomRushLite/Scripts/Source/Animation/: Animation.cpp
KingdomRushLite/Scripts/Source/Bullet/: Bullet.cpp
KingdomRushLite/Scripts/Source/Bullet/Concrete/: Arrow.cpp  Axe.cpp  Shell.cpp
KingdomRushLite/Scripts/Source/Drop/: Drop.cpp
KingdomRushLite/Scripts/Source/Drop/Concrete/: Coin.cpp
KingdomRushLite/Scripts/Source/Enemy/: Enemy.cpp  EnemyType.cpp
KingdomRushLite/Scripts/Source/Enemy/Concrete/: Goblin.cpp  GoblinPriest.cpp  Skeleton.cpp  Slime.cpp  SlimeKing.cpp
KingdomRushLite/Scripts/Source/Infra/: Timer.cpp
KingdomRushLite/Scripts/Source/Infra/StateMachine/: State.cpp  StateMachine.cpp
KingdomRushLite/Scripts/Source/Manager/Concrete/: AudioManager.cpp  BulletManager.cpp  ConfigManager.cpp  DropManager.cpp  EnemyManager.cpp  GameManager.cpp  PlayerManager.cpp  ProcessManager.cpp  ResourceManager.cpp  TowerManager.cpp  UIManager.cpp  WaveManager.cpp
KingdomRushLite/Scripts/Source/Map/: Map.cpp  Route.cpp
KingdomRushLite/Scripts/Source/Math/: Timer.cpp  Vector2.cpp
KingdomRushLite/Scripts/Source/Player/: Player.cpp
KingdomRushLite/Scripts/Source/Player/Concrete/: PlayerDragon.cpp
KingdomRushLite/Scripts/Source/Player/State/: PlayerState.cpp
KingdomRushLite/Scripts/Source/Tower/: Tower.cpp
KingdomRushLite/Scripts/Source/Tower/Concrete/: Archer.cpp  Axeman.cpp  Gunner.cpp
KingdomRushLite/Scripts/Source/UI/: GameOverUI.cpp  StatusBar.cpp  StatusUI.cpp
KingdomRushLite/Scripts/Source/UI/TowerPanel/: TowerPanel.cpp
(+65 files in other folders)
